# ttml-converter

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
converter/: CMakeLists.txt  main.cpp  version.rc.in
installer/: CMakeLists.txt  admin.manifest  main.cpp  version.rc.in
installer/resources/: res.qrc
installer/src/app/: application.cpp  application.h
installer/src/platform/: registry.cpp  registry.h  winregistry.cpp  winregistry.h
